Bug 1326385 - Handle undefined images in BlitFramebuffer. - r=kvark a=lizzard

MozReview-Commit-ID: 3FjzETVL0AZ